Worked on skills
Created the skills secton

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -51,23 +51,18 @@ header {
   padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
 
-@media screen and (max-width: 1024px)
-{
-  header
-  {
+@media screen and (max-width: 1024px) {
+  header {
     height: 68vh;
   }
 }
 
-@media screen and (max-width: 600px)
-{
-  header
-  {
+@media screen and (max-width: 600px) {
+  header {
     height: 100vh;
   }
 
-  .header_socials
-  {
+  .header_socials {
     display: none;
   }
 }
